Fix 'Double association in the diagram after renaming a foreign key constraint'

Since the name has changed, we can't find the widget by name and
have to use a different approach.

BUG:425281
FIXED-IN:2.32.01 (KDE release 20.08.1)